# chatbot

./: .gitignore  README.md
.github/workflows/: codeql.yml
Server/: crewadd.py  custom_gemini_vision_tool.py  generated_image.txt  learning.py  main.py  model.py  modelXwithbettercode.py  payload.json  pyproject.toml  requirements.txt  schemas.py  test.py  trip_planner.py
client/: chatSlice.ts  next.config.ts  package-lock.json  package.json  store.ts  tailwind.config.ts
client/Component/: Chat.tsx  ImageWithHistory.tsx  README.md  Sidebar.tsx  chatx.txt  newxbot.txt
client/app/: globals.css  layout.tsx  page.tsx
client/components/: ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  DragOverlay.tsx  EmptyState.tsx  ErrorDisplay.tsx  FilePreview.tsx
client/components/shared/: FileIcon.tsx  MarkdownRenderer.tsx
client/constants/: chatConstants.ts
client/hooks/: useAutoScroll.ts  useChatHandlers.ts  useFileHandlers.ts  useMessageActions.ts
client/utils/: fileUtils.ts  modelUtils.ts
