[project]
name = "trip_planner"
version = "0.1.0"
description = "testing-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.157.0,<1.0.0",
    "google-genai>=1.29.0",
    "google-generativeai>=0.8.5",
]

[project.scripts]
testing_crew = "trip_planner.main:run"
run_crew = "trip_planner.main:run"
train = "trip_planner.main:train"
replay = "trip_planner.main:replay"
test = "trip_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
